--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -181,6 +181,7 @@ The tests for the above sensors provided in the app will could be used for fun, 
     <string name="please_give_permissions">Some permissions are not given.\nPlease click here to allow them.</string>
 
     <string name="tag_list_fragment">LIST FRAGMENT</string>
+    <string name="tag_sound_test_fragment">SOUD TEST FRAGMENT</string>
     <string name="tag_request_fragment">REQUEST FRAGMENT</string>
     <string name="tag_directions_fragment">DIRECTIONS FRAGMENT</string>
     <string name="tag_test_fragment">TEST FRAGMENT</string>
