--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -268,6 +268,7 @@ The tests for the above sensors provided in the app will could be used for fun, 
     <string name="sense_it_all_abbreviation">S.I.A</string>
     <string name="device_test_splash">DEVICE TEST</string>
     <string name="more_statistics">MORE STATISTICS</string>
+    <string name="loading">Loading…</string>
 
     <string-array name="dummy_headers">
         <item>SAR AND YOUR BODY</item>
